--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-webview": "13.15.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.11"
   },
