--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-device": "~8.0.10",
     "expo-document-picker": "^14.0.8",
     "expo-file-system": "~19.0.21",
+    "expo-image": "~3.0.11",
     "expo-image-picker": "^17.0.10",
     "expo-location": "^19.0.8",
     "expo-notifications": "~0.32.16",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "qrcode": "^1.5.4",
     "typescript": "~5.9.2"
   },
   "private": true
